--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <h2 class="text-2xl sm:text-3xl md:text-3xl font-bold text-center mb-8 sm:mb-12 md:mb-16">Access Quotient</h2>
     <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-6 sm:gap-8">
       <div class="bg-[rgba(15,15,25,0.75)] border border-white/15 rounded-lg p-5 sm:p-6 md:p-8 relative overflow-hidden">
-        <h3 class="text-xl sm:text-2xl md:text-2xl font-bold mb-3 sm:mb-4 md:mb-4 text-purple-warpcast">Farcaster Research</h3>
+        <h3 class="text-xl sm:text-2xl md:text-2xl font-bold mb-3 sm:mb-4 md:mb-4 text-purple-warpcast">Farcaster Research Agent</h3>
         <p class="text-sm sm:text-base md:text-base text-text-muted mb-6 sm:mb-8 md:mb-8">Search Farcaster's builder graph with natural language. Find relevant builders, generate leads, discover talent, or identify interesting projects to follow.</p>
         <a href="https://farcaster.usequotient.xyz/" class="inline-block bg-purple-warpcast/20 hover:bg-purple-warpcast/30 text-purple-warpcast border border-purple-warpcast/30 px-4 sm:px-6 md:px-6 py-2 sm:py-3 md:py-3 rounded text-xs sm:text-sm md:text-sm font-medium uppercase tracking-wider transition-all hover:shadow-[0_0_20px_rgba(138,99,210,0.4)]">Open in Warpcast</a>
       </div>
