--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </div>
       </div>
       
-      <div class="lg:w-1/3 flex flex-wrap gap-4 sm:gap-6 md:gap-6 justify-center items-center mt-8 lg:mt-0">
+      <!-- <div class="lg:w-1/3 flex flex-wrap gap-4 sm:gap-6 md:gap-6 justify-center items-center mt-8 lg:mt-0">
         <img src="https://warpcast.com/favicon.ico" alt="Farcaster" class="h-8 sm:h-10 md:h-10 w-auto opacity-80 hover:opacity-100 transition-opacity">
         <img src="https://github.githubassets.com/favicons/favicon.svg" alt="GitHub" class="h-8 sm:h-10 md:h-10 w-auto opacity-80 hover:opacity-100 transition-opacity">
         <img src="https://www.discourse.org/a/img/favicon.png" alt="Discourse" class="h-8 sm:h-10 md:h-10 w-auto opacity-80 hover:opacity-100 transition-opacity">
@@ -154,7 +154,7 @@
         <img src="https://mirror.xyz/favicon-32x32.png" alt="Mirror" class="h-8 sm:h-10 md:h-10 w-auto opacity-80 hover:opacity-100 transition-opacity">
         <img src="https://snapshot.org/favicon.ico" alt="Snapshot" class="h-8 sm:h-10 md:h-10 w-auto opacity-80 hover:opacity-100 transition-opacity">
         <img src="https://www.tally.xyz/favicon.ico" alt="Tally" class="h-8 sm:h-10 md:h-10 w-auto opacity-80 hover:opacity-100 transition-opacity">
-      </div>
+      </div> -->
     </div>
   </section>
   <!-- USE CASES SECTION -->
