--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       
       <div class="bg-card/30 border border-default/20 rounded-lg p-5 text-center">
         <div class="text-2xl sm:text-3xl md:text-4xl font-bold text-blue-bright mb-2">10+</div>
-        <p class="text-sm sm:text-base text-text-muted">Web2+Web3 platforms covered, including Farcaster, Discourse, Tally, Github Gitcoin</p>
+        <p class="text-sm sm:text-base text-text-muted">Web2xWeb3 platforms covered, including Farcaster, Discourse, Tally, Github, and Gitcoin</p>
       </div>
     </div>
     
