--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       
       <div class="bg-[rgba(15,15,25,0.75)] border border-white/15 rounded-lg p-5 sm:p-6 md:p-8 relative overflow-hidden" id="contact-form">
         <h3 class="text-xl sm:text-2xl md:text-2xl font-bold mb-3 sm:mb-4 md:mb-4 text-blue-bright">API & Data Access</h3>
-        <p class="text-sm sm:text-base md:text-base text-text-muted mb-6 sm:mb-8 md:mb-8">Get direct access to our Accounts API, covering 500k+ builder wallets across Ethereum and Solana. Connect wallets to social accounts and onchain activity.</p>
+        <p class="text-sm sm:text-base md:text-base text-text-muted mb-6 sm:mb-8 md:mb-8">Get direct access to our Identity Resolution API, covering 500k+ builder wallets across Ethereum and Solana. Connect wallets to social accounts and onchain activity.</p>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdcoMQdDZUmzbzBaG28Dd7i2mVuNh5dIZiJqpH3_Y1CeEU5-Q/viewform?usp=dialog" class="inline-block bg-blue-primary hover:bg-[#0046cc] text-white px-4 sm:px-6 md:px-6 py-2 sm:py-3 md:py-3 rounded text-xs sm:text-sm md:text-sm font-medium uppercase tracking-wider transition-all hover:shadow-[0_0_20px_rgba(0,87,255,0.4)]">Request Access</a>
       </div>
     </div>
