--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
       
       <!-- Features -->
       <div class="w-full md:w-1/2 bg-card/30 border border-default/20 rounded-lg p-6 sm:p-8 md:p-8">
-        <h3 class="text-xl sm:text-2xl font-bold mb-6 text-blue-bright">Features</h3>
+        <h3 class="text-xl sm:text-2xl font-bold mb-6 text-blue-bright">Power tools for Farcaster</h3>
         <ul class="space-y-4 text-text-muted">
           <li class="flex items-start gap-3">
             <svg class="w-5 h-5 text-blue-bright flex-shrink-0 mt-0.5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -251,7 +251,7 @@
     <!-- Giant Button -->
     <div class="flex justify-center">
       <a href="https://www.sidequest.build/quotient" target="_blank" rel="noopener" class="bg-blue-primary hover:bg-[#0046cc] text-white px-8 sm:px-10 md:px-12 py-4 sm:py-5 md:py-6 text-base sm:text-lg md:text-xl font-bold rounded-lg uppercase tracking-wider relative overflow-hidden transition-all hover:shadow-[0_0_30px_rgba(0,87,255,0.5)] flex items-center justify-center group">
-        <span class="relative z-10">Back Version 1</span>
+        <span class="relative z-10">Back Crowdfunding Campaign</span>
         <svg class="w-4 h-4 sm:w-5 sm:h-5 md:w-5 md:h-5 ml-2 sm:ml-3 relative z-10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
           <polyline points="15 3 21 3 21 9"></polyline>
