--- a/index.html
+++ b/index.html
@@ -224,25 +224,31 @@
       
       <!-- Features -->
       <div class="w-full md:w-1/2 bg-card/30 border border-default/20 rounded-lg p-6 sm:p-8 md:p-8">
-        <h3 class="text-xl sm:text-2xl font-bold mb-6 text-blue-bright">Power tools for Farcaster</h3>
+        <h3 class="text-xl sm:text-2xl font-bold mb-6 text-blue-bright">Power tools for Builders on Farcaster</h3>
         <ul class="space-y-4 text-text-muted">
           <li class="flex items-start gap-3">
             <svg class="w-5 h-5 text-blue-bright flex-shrink-0 mt-0.5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <polyline points="20 6 9 17 4 12"></polyline>
             </svg>
-            <span>Track a farcaster channel or miniapp</span>
+            <span>Understand the audience of your Farcaster Channel, Mini-app, or Token Community</span>
           </li>
           <li class="flex items-start gap-3">
             <svg class="w-5 h-5 text-blue-bright flex-shrink-0 mt-0.5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <polyline points="20 6 9 17 4 12"></polyline>
             </svg>
-            <span>Gain user insights</span>
+            <span>Gain insights on the interests, experiences, and capabilities of your community</span>
           </li>
           <li class="flex items-start gap-3">
             <svg class="w-5 h-5 text-blue-bright flex-shrink-0 mt-0.5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <polyline points="20 6 9 17 4 12"></polyline>
             </svg>
-            <span>Grow your community</span>
+            <span>Access insights to implement tactics to increase growth and engagement</span>
+          </li>
+          <li class="flex items-start gap-3">
+            <svg class="w-5 h-5 text-blue-bright flex-shrink-0 mt-0.5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <polyline points="20 6 9 17 4 12"></polyline>
+            </svg>
+            <span>Showcase your community's status, capability, and credentials</span>
           </li>
         </ul>
       </div>
