--- a/index.html
+++ b/index.html
@@ -208,17 +208,11 @@
     <div class="max-w-6xl mx-auto flex flex-col md:flex-row gap-8 md:gap-12 mb-10 sm:mb-12 md:mb-16">
       <!-- Image Preview -->
       <div class="w-full md:w-1/2 bg-card/30 border border-default/20 rounded-lg p-6 sm:p-8 md:p-8 flex items-center justify-center">
-        <div class="aspect-video w-full bg-gradient-to-br from-blue-primary/20 to-purple-warpcast/20 rounded-lg flex items-center justify-center">
-          <svg class="w-16 h-16 text-blue-bright opacity-70" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-            <rect x="2" y="2" width="20" height="20" rx="2.18" ry="2.18"></rect>
-            <line x1="7" y1="2" x2="7" y2="22"></line>
-            <line x1="17" y1="2" x2="17" y2="22"></line>
-            <line x1="2" y1="12" x2="22" y2="12"></line>
-            <line x1="2" y1="7" x2="7" y2="7"></line>
-            <line x1="2" y1="17" x2="7" y2="17"></line>
-            <line x1="17" y1="17" x2="22" y2="17"></line>
-            <line x1="17" y1="7" x2="22" y2="7"></line>
-          </svg>
+        <div class="aspect-video w-full bg-gradient-to-br from-blue-primary/20 to-purple-warpcast/20 rounded-lg flex items-center justify-center overflow-hidden">
+          <video class="w-full h-full object-cover" autoplay loop muted playsinline>
+            <source src="anony.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
         </div>
       </div>
       
